# philo-chat-app

./: README.md  pyproject.toml
app/: alembic.ini  config.py  database.py  db.py  dependencies.py  main.py  models.py  philo_chat.db
app/alembic/: env.py
app/alembic/versions/: 18634e099dd3_init.py  b45cb9471701_init.py
app/core/: constants.py  exceptions.py  secutiry.py
app/core/entities/: __init__.py  chat.py  message.py  philosopher.py  user.py
app/core/models/: __init__.py  chat.py  message.py  philosopher.py  user.py
app/core/utils/: __init__.py  prompt_loader.py  run_completion.py
app/routes/: __init__.py  auth.py  chat.py  user.py
app/schemas/: auth.py  chat.py  user.py
app/services/: philo_chat.py
